# Nexus

./: .gitignore  .prettierignore  CHANGES-NEXUSSHIELD.md  COMPARISON.md  LICENSE  README.md  audit_gen.mjs  audit_gen.ts  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
ci-workflows/: ci.yml  release.yml
landing/: .gitignore  CHANGELOG.md  COMPARISON.md  LICENSE  README.md  index.html  package.json
landing/.github/workflows/: ci.yml  release.yml
landing/landing/: index.html
landing/scripts/: fetch-cores.d.mts  fetch-cores.mjs  pre-commit
landing/src/: App.tsx  index.css  main.tsx
landing/src-tauri/: Cargo.toml  tauri.conf.json
landing/src-tauri/icons/: icon.icns
landing/src-tauri/src/: commands.rs  core.rs  killswitch.rs  lib.rs  ping.rs  privilege.rs  sysproxy.rs  tray.rs
landing/src/core/: configSchemas.ts  coreAccepts.integration.test.ts  deeplink.test.ts  deeplink.ts  dns.test.ts  dns.ts  ipc.ts  newProtocols.test.ts  types.ts  updater.test.ts  updater.ts  validate.test.ts  warp.test.ts  warp.ts
landing/src/core/i18n/: i18n.test.ts  messages.ts  useT.ts
landing/src/core/parser/: parser.test.ts  protocols.ts  singboxImport.test.ts  singboxImport.ts  stress.audit.test.ts  util.ts
landing/src/core/proxy/: cores.test.ts  xrayCore.ts
landing/src/core/share/: roundtrip.test.ts  serialize.test.ts  serialize.ts
landing/src/core/singbox/: configGen.test.ts  configGen.ts
landing/src/core/subscriptions/: scheduler.test.ts  scheduler.ts
landing/src/core/xray/: configGen.test.ts  configGen.ts
landing/src/features/connection/: ConnectionScreen.tsx
landing/src/features/editor/: EditorScreen.tsx
landing/src/features/history/: HistoryScreen.tsx
landing/src/features/import/: ImportDialog.tsx
landing/src/features/onboarding/: Onboarding.tsx
landing/src/features/servers/: ServerCard.tsx  ServersScreen.tsx  ShareDialog.tsx  protocolMeta.ts
landing/src/features/settings/: BackupSection.tsx  SettingsScreen.tsx  SubscriptionList.tsx  UpdateSection.tsx
landing/src/features/stats/: StatsScreen.tsx  TrafficGraph.tsx
landing/src/scripts/: extractCommand.test.ts
landing/src/shared/components/: AppBackground.tsx  CommandPalette.tsx  ConfirmDialog.tsx  CustomSelect.tsx  Flag.tsx  ShieldConnectButton.tsx  Sidebar.tsx  Sparkline.tsx  TitleBar.tsx  Toaster.tsx
landing/src/shared/hooks/: useConnectionToasts.ts  useCoreEvents.ts  useCoreNotices.ts  useHealthMonitor.ts  useTrafficPoller.ts
landing/src/shared/lib/: accents.ts  flags.ts  utils.ts
landing/src/store/: resilientFetch.test.ts  subscriptionTls.test.ts  useConnectionStore.ts  useHistoryStore.ts  useServerStore.ts  useToastStore.ts
landing/src/types/: monaco-workers.d.ts
landing/warp-relay/: README.md  package.json
scripts/: fetch-cores.d.mts  fetch-cores.mjs  fix-unicode-escapes.mjs  gen_icons.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  core.rs  killswitch.rs  lib.rs  main.rs  ping.rs  privilege.rs  proc.rs  sysproxy.rs  tray.rs
src/core/: backup.test.ts  backup.ts  configSchemas.ts  coreAccepts.integration.test.ts  db.ts  deeplink.test.ts  ipc.ts  newProtocols.test.ts  qr.ts  types.ts  validate.test.ts  validate.ts  warp.test.ts  warp.ts
src/core/i18n/: i18n.test.ts  index.ts  messages.ts
src/core/juicity/: configGen.test.ts  configGen.ts
src/core/naive/: configGen.test.ts  configGen.ts
src/core/parser/: index.ts  parser.test.ts  protocols.ts  singboxImport.test.ts  singboxImport.ts  stress.audit.test.ts  util.ts
src/core/proxy/: cores.test.ts  index.ts  juicityCore.ts  naiveCore.ts  singboxCore.ts  types.ts  xrayCore.ts
src/core/share/: roundtrip.test.ts  serialize.ts
src/core/singbox/: configGen.test.ts  configGen.ts
src/core/subscriptions/: scheduler.test.ts  scheduler.ts
src/core/xray/: configGen.test.ts  configGen.ts
src/features/connection/: ConnectionScreen.tsx
src/features/editor/: EditorScreen.tsx
src/features/history/: HistoryScreen.tsx
src/features/import/: ImportDialog.tsx
src/features/logs/: LogsScreen.tsx
src/features/onboarding/: Onboarding.tsx
src/features/servers/: ServerCard.tsx  ServersScreen.tsx  ShareDialog.tsx  protocolMeta.ts
src/features/settings/: BackupSection.tsx  SettingsScreen.tsx  SubscriptionList.tsx  UpdateSection.tsx
src/features/stats/: ExitInfoPanel.tsx  SpeedTestPanel.tsx  StatsScreen.tsx  TrafficGraph.tsx
src/scripts/: extractCommand.test.ts
src/shared/components/: AppBackground.tsx  CodeEditor.tsx  CommandPalette.tsx  ConnectButton.tsx  CustomSelect.tsx  ErrorBoundary.tsx  Flag.tsx  ShieldConnectButton.tsx  Sidebar.tsx  Sparkline.tsx  TitleBar.tsx  Toaster.tsx
src/shared/hooks/: useConnectionToasts.ts  useCoreEvents.ts  useCoreNotices.ts  useSessionHistory.ts  useTrafficPoller.ts
src/shared/lib/: accents.ts  flags.ts  motion.ts  utils.ts
src/store/: resilientFetch.test.ts  subscriptionTls.test.ts  toastDedup.test.ts  useConnectionStore.ts  useHistoryStore.ts  useServerStore.ts  useSettingsStore.ts  useToastStore.ts
warp-relay/: Dockerfile  README.md  server.js
