[package]
name = "nexusshield"
version = "0.1.0"
description = "NexusShield — universal Xray-core / Sing-box client"
authors = ["NexusShield"]
edition = "2021"
rust-version = "1.77"

# The library is what Tauri's mobile/desktop entrypoints link against.
[lib]
name = "nexusshield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Force time >= 0.3.36 in the BUILD graph (tauri-build -> tauri-utils -> time).
# Older 0.3.x versions fail with a spurious E0119 coherence error on modern
# rustc (>= 1.80), which is why tauri-utils failed to compile in CI.
time = "0.3.36"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

anyhow = "1"
thiserror = "2"
log = "0.4"
chrono = { version = "0.4", features = ["clock"] }
# Force time >= 0.3.36 in the normal graph (tauri -> tauri-utils -> time) too.
# See the note in [build-dependencies] above.
time = "0.3.36"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
